welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: not found: value getMondeLarguerur
for (j<-0 to (getMondeLarguerur()-1)){
              ^